--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,49 +7,69 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout repo
-      uses: actions/checkout@v3
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        distribution: 'temurin'
-        java-version: 17
-    - name: Patch TypPaintingArt.java
-      run: |
-        sed -i 's/public class TypPaintingArt {/public class TypPaintingArt {\
-    static {\
-        try {\
-            Class<?> paintingArtClass = Class.forName("org.bukkit.Art");\
-            if (paintingArtClass.isEnum()) {\
-                EnumUtils<?> utils = new EnumUtils<>(paintingArtClass);\
-                new EnumClassInfo<>(paintingArtClass, "paintingart")\
-                        .parser(new Parser<Enum<?>>() {\
-                            @Override\
-                            public Enum<?> parse(String input, ParseContext context) {\
-                                return utils.parse(input);\
-                            }\
-                            @Override\
-                            public String toString(Enum<?> e, int flags) {\
-                                return e.name();\
-                            }\
-                            @Override\
-                            public String toVariableNameString(Enum<?> e) {\
-                                return e.name();\
-                            }\
-                            @Override\
-                            public String getVariableNamePattern() {\
-                                return "\\\\w+";\
-                            }\
-                        });\
-            }\
-        } catch (ClassNotFoundException e) {\
-            Bukkit.getLogger().warning("[Diskuise] Art enum not found; skipping TypPaintingArt registration.");\
-        }\
-    }/' src/main/java/me/tud/diskuise/elements/types/TypPaintingArt.java
-    - name: Build with Maven
-      run: mvn clean package
-    - name: Upload JAR
-      uses: actions/upload-artifact@v3
-      with:
-        name: Diskuise-Fixed-JAR
-        path: target/Diskuise.jar
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: 17
+
+      - name: Patch TypPaintingArt.java
+        run: |
+          cat << EOF > src/main/java/me/tud/diskuise/elements/types/TypPaintingArt.java
+          package me.tud.diskuise.elements.types;
+
+          import ch.njol.skript.util.EnumUtils;
+          import ch.njol.skript.classes.Parser;
+          import ch.njol.skript.classes.ClassInfo;
+          import ch.njol.skript.classes.EnumClassInfo;
+          import org.bukkit.Bukkit;
+          import org.bukkit.event.Event;
+
+          public class TypPaintingArt {
+
+              static {
+                  try {
+                      Class<?> paintingArtClass = Class.forName("org.bukkit.Art");
+                      if (paintingArtClass.isEnum()) {
+                          EnumUtils<?> utils = new EnumUtils<>(paintingArtClass);
+                          new EnumClassInfo<>(paintingArtClass, "paintingart")
+                              .parser(new Parser<Enum<?>>() {
+                                  @Override
+                                  public Enum<?> parse(String input, ParseContext context) {
+                                      return utils.parse(input);
+                                  }
+
+                                  @Override
+                                  public String toString(Enum<?> e, int flags) {
+                                      return e.name();
+                                  }
+
+                                  @Override
+                                  public String toVariableNameString(Enum<?> e) {
+                                      return e.name();
+                                  }
+
+                                  @Override
+                                  public String getVariableNamePattern() {
+                                      return "\\w+";
+                                  }
+                              });
+                      }
+                  } catch (ClassNotFoundException e) {
+                      Bukkit.getLogger().warning("[Diskuise] Art enum not found; skipping TypPaintingArt registration.");
+                  }
+              }
+          }
+          EOF
+
+      - name: Build with Maven
+        run: mvn clean package
+
+      - name: Upload JAR
+        uses: actions/upload-artifact@v3
+        with:
+          name: Diskuise-Fixed-JAR
+          path: target/Diskuise.jar
