--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,14 +13,13 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
+          distribution: temurin
           java-version: 17
 
       - name: Patch TypPaintingArt.java
         run: |
-          cat << EOF > src/main/java/me/tud/diskuise/elements/types/TypPaintingArt.java
+          cat > src/main/java/me/tud/diskuise/elements/types/TypPaintingArt.java << 'EOF'
 package me.tud.diskuise.elements.types;
-
 import ch.njol.skript.util.EnumUtils;
 import ch.njol.skript.classes.Parser;
 import ch.njol.skript.classes.ClassInfo;
@@ -68,7 +67,7 @@ EOF
       - name: Build with Maven
         run: mvn clean package
 
-      - name: Upload JAR
+      - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
           name: Diskuise-Fixed-JAR
